CyberBuddy - Fix overlap between the chat input and the list of messages

--- a/public/cyber_buddy/botman/chat_2.css
+++ b/public/cyber_buddy/botman/chat_2.css
@@ -8,6 +8,7 @@
   background: none;
   padding: 0;
   margin: 0;
+  height: calc(100vh - 55px /* height of the #userText element */);
 }
 
 .chat li {
